# mini_proj_dyn

./: README.md
catkin_ws/src/command_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/command_publisher/cfg/: velocity.cfg
catkin_ws/src/command_publisher/include/command_publisher/: command_publisher.h
catkin_ws/src/command_publisher/launch/: command_publisher.launch
catkin_ws/src/command_publisher/param/: velocity_parameters.yaml
catkin_ws/src/command_publisher/src/: command_publisher.cpp  command_publisher_node.cpp
catkin_ws/src/jackal/jackal_control/launch/: control.launch
catkin_ws/src/jackal/jackal_description/launch/: description.launch
catkin_ws/src/jackal/jackal_description/urdf/: jackal.gazebo  jackal.urdf.xacro
catkin_ws/src/jackal_simulator/jackal_gazebo/launch/: jackal_world.launch  spawn_jackal.launch
